<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.telaPrincipal.ui.updategoals.UpdateGoals">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.telaPrincipal.ui.updategoals.UpdateGoals"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green_bar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/toolbarUpdateGoal"
            app:titleTextColor="@color/white"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Adicionando o CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_bar"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewTaskTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Update Goal"
                    android:textColor="@color/white"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/editTextTaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_green"
                    android:layout_marginTop="12dp"
                    android:hint="@string/txt_edit_task"
                    android:textSize="18dp"
                    android:padding="12dp"/>

                <EditText
                    android:id="@+id/editTextDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_green"
                    android:layout_marginTop="12dp"
                    android:hint="@string/txt_edit_task_desc"
                    android:textSize="18dp"
                    android:padding="12dp"/>

                <TextView
                    android:id="@+id/editMap"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_map"
                    android:layout_gravity="center"
                    android:background="@color/add_goals"
                    android:drawableRight="@drawable/ic_add_local"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <Button
                    android:id="@+id/btnSaveTask"
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/l_green"
                    android:text="@string/btn_salvar_goal"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
