<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.telaPrincipal.ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/txt_profile"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="Name" />

        <EditText
            android:id="@+id/editTextDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="Date of Birth" />

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="Location" />

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_save_profile"
            android:backgroundTint="@color/l_green"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:layout_margin="20dp"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/material_on_primary_emphasis_medium"
        app:layout_constraintTop_toBottomOf="@id/firstLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textProfileInformacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Informações salvas no seu perfil "
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/textProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name: " />

            <TextView
                android:id="@+id/textProfileDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Date of Birth: " />

            <TextView
                android:id="@+id/textProfileLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Location: " />
            <Button
                android:id="@+id/btnExcluirProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_excluir_profile"
                android:backgroundTint="@color/l_green"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:padding="15dp"
                android:layout_margin="20dp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
